[gd_scene load_steps=8 format=2]

[ext_resource path="res://Entity/EntityBase.gd" type="Script" id=1]
[ext_resource path="res://overlap/Hurtbox.tscn" type="PackedScene" id=2]
[ext_resource path="res://effects/Player/WizardDeathEffect.tscn" type="PackedScene" id=3]
[ext_resource path="res://effects/Skeleton/SkeletonDeathEffect.tscn" type="PackedScene" id=4]
[ext_resource path="res://UI/HealthBar.tscn" type="PackedScene" id=5]
[ext_resource path="res://effects/StoneGolem/StoneGolemDeathEffect.tscn" type="PackedScene" id=6]

[sub_resource type="CapsuleShape2D" id=4]
height = 16.0

[node name="EntityBase" type="KinematicBody2D"]
script = ExtResource( 1 )
WIZARD_EFFECT_DIED = ExtResource( 3 )
SKELETON_EFFECT_DIED = ExtResource( 4 )
STONEGOLEM_EFFECT_DIED = ExtResource( 6 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="HurtBox" parent="." instance=ExtResource( 2 )]

[node name="CollisionShape2D" parent="HurtBox" index="0"]
shape = SubResource( 4 )

[node name="HealthBar" parent="." instance=ExtResource( 5 )]
visible = false
margin_left = -45.0
margin_top = -37.0
margin_right = 84.0
margin_bottom = -21.0
rect_scale = Vector2( 0.7, 1 )

[node name="HealthBarTimer" type="Timer" parent="."]
pause_mode = 2
wait_time = 3.0
one_shot = true

[node name="KnockBackTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="died" from="." to="." method="_on_EntityBase_died"]
[connection signal="area_entered" from="HurtBox" to="." method="_on_HurtBox_area_entered"]

[editable path="HurtBox"]
